--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
 										<ul class="nav menu">
 											<li class="active"><a href="#">Home <i class="icofont-rounded-down"></i></a>
 												<ul class="dropdown">
-													<li><a href="index.html">Home Page 1</a></li>
+													<li><a href="index.html">sub menu</a></li>
+													<li><a href="index.html">sub menu 2</a></li>
 												</ul>
 											</li>
 											<li><a href="#">Doctos </a></li>
